@@ -10,39 +10,16 @@ import guess.util.LocalizationUtils;
 
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 /**
  * Speaker error details DTO.
  */
-public class SpeakerErrorDetailsDto {
-    private final String photoFileName;
-    private final String name;
-    private final List<String> yourAnswers;
-
-    private SpeakerErrorDetailsDto(String photoFileName, String name, List<String> yourAnswers) {
-        this.photoFileName = photoFileName;
-        this.name = name;
-        this.yourAnswers = yourAnswers;
-    }
-
-    public String getPhotoFileName() {
-        return photoFileName;
-    }
-
-    public String getName() {
-        return name;
-    }
-
-    public List<String> getYourAnswers() {
-        return yourAnswers;
-    }
-
+public record SpeakerErrorDetailsDto(String photoFileName, String name, List<String> yourAnswers) {
     private static SpeakerErrorDetailsDto convertToDto(ErrorDetails errorDetails, GuessMode guessMode, Language language) {
         if (GuessMode.GUESS_NAME_BY_PHOTO_MODE.equals(guessMode) || GuessMode.GUESS_PHOTO_BY_NAME_MODE.equals(guessMode)) {
             List<Speaker> speakers = errorDetails.availableAnswers().stream()
                     .map(q -> ((SpeakerAnswer) q).getSpeaker())
-                    .collect(Collectors.toList());
+                    .toList();
 
             Set<Speaker> speakerDuplicates = LocalizationUtils.getSpeakerDuplicates(
                     speakers,
@@ -55,7 +32,7 @@ public class SpeakerErrorDetailsDto {
                     .map(q -> GuessMode.GUESS_NAME_BY_PHOTO_MODE.equals(guessMode) ?
                             LocalizationUtils.getSpeakerName(((SpeakerAnswer) q).getSpeaker(), language, speakerDuplicates) :
                             ((SpeakerAnswer) q).getSpeaker().getPhotoFileName())
-                    .collect(Collectors.toList());
+                    .toList();
 
             return new SpeakerErrorDetailsDto(
                     questionSpeaker.getPhotoFileName(),
@@ -69,6 +46,6 @@ public class SpeakerErrorDetailsDto {
     public static List<SpeakerErrorDetailsDto> convertToDto(List<ErrorDetails> errorDetailsList, GuessMode guessMode, Language language) {
         return errorDetailsList.stream()
                 .map(e -> convertToDto(e, guessMode, language))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
